Fix(frontend): Observer no longer tries to access non-visible columns. Now for real, it all works now

--- a/Software/AppWeb/frontend/src/components/ColumnsContainer/ColumnsContainer.css
+++ b/Software/AppWeb/frontend/src/components/ColumnsContainer/ColumnsContainer.css
@@ -1,9 +1,37 @@
-.columns-container {
+.columns-container-wrapper {
     width: auto;
-    height: 100%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    gap: 30px;
+}
+.columns-container {
+    flex: 1;
     display: flex;
     flex-direction: row;
-    padding: 30px;
+}
+.columns-container-minimized {
+    position: relative;
+    max-height: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    padding: 10px;
+    border-radius: 4px;
+    gap: 30px;
+}
+.columns-container-minimized::before {
+    content: "";
+    position: absolute;
+    top: -8px;
+    left: -8px;
+    right: -8px;
+    bottom: -8px;
+    background-color: #ff00ea34;
+    border-radius: 6px; /* adjust to suit your design */
+    z-index: -1;  /* place behind the content */
 }
 
 .column-visible {
@@ -14,7 +42,15 @@
 }
 
 .column-hidden {
-    display: none;
+    flex: 1;
+    max-width: 300px;
+    background-color: #cc00ff44;
+    border-radius: 4px;
+    transition: scale 0.1s ease-in-out;
+}
+.column-hidden:hover {
+    cursor: pointer;
+    scale: 1.05;
 }
 
 .resize-handle {
@@ -23,7 +59,7 @@
     height: 100%;
     background-color: #4c00ff00;
     border-radius: 4px;
-    cursor: ew-resize;
+    cursor: col-resize;
     position: relative;
     z-index: 2;
     transition: background-color 0.3s ease-in-out;
